# Enigma

./: .gitignore  CMakeLists.txt  README.md  build_enigma.bat  build_release.bat  main.cpp  profile.bat
ci/: run_screenshot_diff.ps1  run_spirv_diff.ps1
cmake/: Dependencies.cmake
shaders/: atmosphere_aerial_perspective.hlsl  atmosphere_common.hlsl  atmosphere_multiscatter.hlsl  atmosphere_skyview.hlsl  atmosphere_transmittance.hlsl  clustered_forward.hlsl  common.hlsl  csm.hlsl  debug_blit.hlsl  debug_clusters.hlsl  debug_detail_lighting.hlsl  debug_micropoly_bin_overflow.hlsl  debug_micropoly_bounds.hlsl  debug_micropoly_lod_heatmap.hlsl  debug_micropoly_raster_class.hlsl  debug_micropoly_residency_heatmap.hlsl  debug_unlit.hlsl  debug_wireframe.frag.hlsl  debug_wireframe_terrain.frag.hlsl  denoise_spatial.hlsl  denoise_temporal.hlsl  gbuffer.hlsl  gpu_cull.comp.hlsl  hiz_build.comp.hlsl  lighting.hlsl  material_eval.comp.hlsl  mesh.hlsl  physics_debug.hlsl  post_process.hlsl  sky_background.hlsl  smaa_blend.hlsl  smaa_edge.hlsl  smaa_neighborhood.hlsl  ssao.hlsl  ssr.hlsl  terrain_cdlod.mesh.hlsl  terrain_cdlod.task.hlsl  terrain_clipmap.hlsl  terrain_wireframe.frag.hlsl  triangle.frag  (+6 more)
shaders/micropoly/: mp_cluster_cull.comp.hlsl  mp_cluster_layout.hlsl  mp_raster.mesh.hlsl  mp_raster.task.hlsl  mp_vis_pack.hlsl  page_request_emit.hlsl  sw_raster.comp.hlsl  sw_raster_bin.comp.hlsl  sw_raster_bin_prep.comp.hlsl
shaders/rt/: gi.rchit.hlsl  gi.rgen.hlsl  reflection.rchit.hlsl  reflection.rgen.hlsl  reflection.rmiss.hlsl  shadow.rgen.hlsl  shadow.rmiss.hlsl  wetroad.rgen.hlsl
src/asset/: GltfLoader.cpp  GltfLoader.h  MpAssetFormat.cpp  MpAssetFormat.h  MpAssetReader.cpp  MpAssetReader.h  MpPathUtils.h
src/core/: Assert.h  Log.cpp  Log.h  Math.h  Paths.cpp  Paths.h  Types.h
src/ecs/: Archetype.h  Component.h  Components.h  Ecs.h  Entity.h  Query.h  System.h  TypeId.h  World.cpp  World.h
src/ecs/systems/: CameraSystem.h  InputSystem.h  PhysicsSystem.h  TerrainSystem.h  TransformSystem.h  VehicleSystem.h
src/engine/: Application.cpp  Application.h  Clock.cpp  Clock.h  Engine.cpp  Engine.h
src/gfx/: AccelerationStructure.cpp  AccelerationStructure.h  Allocator.cpp  Allocator.h  AllocatorAdopt.cpp  DescriptorAllocator.cpp  DescriptorAllocator.h  Device.cpp  Device.h  DeviceAdopt.cpp  FrameContext.cpp  FrameContext.h  GpuProfiler.cpp  GpuProfiler.h  ImGuiLayer.cpp  ImGuiLayer.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  RTPipeline.cpp  RTPipeline.h  RenderGraph.cpp  RenderGraph.h  RenderGraphResources.h  ShaderHotReload.cpp  ShaderHotReload.h  ShaderManager.cpp  ShaderManager.h  Swapchain.cpp  Swapchain.h  UploadContext.cpp  UploadContext.h  Validation.cpp  Validation.h
src/input/: Input.cpp  Input.h
src/physics/: CrumpleZone.cpp  CrumpleZone.h  DeformationSystem.cpp  DeformationSystem.h  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.h  PhysicsInterpolation.cpp  PhysicsInterpolation.h  PhysicsShapes.cpp  PhysicsShapes.h  PhysicsWorld.cpp  PhysicsWorld.h  VehicleConfig.cpp  VehicleConfig.h  VehicleController.cpp  VehicleController.h
src/platform/: Window.cpp  Window.h
src/renderer/: AASettings.h  AtmospherePass.cpp  AtmospherePass.h  AtmosphereSettings.h  ClusteredForwardPass.cpp  ClusteredForwardPass.h  DLSSUpscaler.cpp  DLSSUpscaler.h  DebugVisualizationPass.cpp  DebugVisualizationPass.h  Denoiser.cpp  Denoiser.h  FSRUpscaler.cpp  FSRUpscaler.h  GBufferFormats.h  GBufferPass.cpp  GBufferPass.h  GpuCullPass.cpp  GpuCullPass.h  GpuMeshletBuffer.cpp  GpuMeshletBuffer.h  GpuSceneBuffer.cpp  GpuSceneBuffer.h  HiZPass.cpp  HiZPass.h  IndirectDrawBuffer.cpp  IndirectDrawBuffer.h  LightingPass.cpp  LightingPass.h  MaterialEvalPass.cpp  MaterialEvalPass.h  MeshPass.cpp  MeshPass.h  Meshlet.h  MeshletBuilder.cpp  MeshletBuilder.h  PostProcessPass.cpp  PostProcessPass.h  RTGIPass.cpp  RTGIPass.h  (+24 more)
src/renderer/micropoly/: AsyncIOWorker.cpp  AsyncIOWorker.h  MicropolyBlasManager.cpp  MicropolyBlasManager.h  MicropolyBlasManagerError.cpp  MicropolyCapability.cpp  MicropolyCapability.h  MicropolyConfig.h  MicropolyCullPass.cpp  MicropolyCullPass.h  MicropolyPass.cpp  MicropolyPass.h  MicropolyRasterPass.cpp  MicropolyRasterPass.h  MicropolyRasterPassError.cpp  MicropolyStreaming.cpp  MicropolyStreaming.h  MicropolySwRasterPass.cpp  MicropolySwRasterPass.h  MicropolySwRasterPassError.cpp  PageCache.cpp  PageCache.h  README.md  RequestQueue.cpp  RequestQueue.h  ResidencyManager.cpp  ResidencyManager.h
src/scene/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  FollowCamera.cpp  FollowCamera.h  Scene.cpp  Scene.h  Transform.h
src/ui/: MicropolySettingsPanel.cpp  MicropolySettingsPanel.h
src/world/: CdlodTerrain.cpp  CdlodTerrain.h  HeightmapLoader.cpp  HeightmapLoader.h  Terrain.cpp  Terrain.h
tests/: async_io_worker_test.cpp  build_ecs_test.bat  cluster_builder_test.cpp  cold_cache_stress_test.cpp  dag_builder_test.cpp  ecs_bench.cpp  ecs_compile_test.cpp  gltf_ingest_test.cpp  micropoly_blas_manager_test.cpp  micropoly_capability_test.cpp  micropoly_cull_test.cpp  micropoly_raster_test.cpp  micropoly_settings_panel_test.cpp  micropoly_streaming_test.cpp  micropoly_sw_raster_bin_test.cpp  mp_asset_reader_test.cpp  mp_vis_pack_compile_test.cpp  p2996_probe.cpp  page_cache_test.cpp  page_writer_test.cpp  probe_build.bat  request_queue_test.cpp  residency_lru_test.cpp  run_bench.bat  screenshot_diff_test.cpp  simplify_test.cpp  spirv_diff_test.cpp  throughput_bench.cpp
tests/infra/screenshot_diff/: ScreenshotDiffHarness.cpp  ScreenshotDiffHarness.h
tests/infra/screenshot_diff/reference/: README.md
tests/infra/spirv_diff/: SpirvDiffHarness.cpp  SpirvDiffHarness.h
tests/infra/spirv_diff/golden/: README.md  atmosphere_aerial_perspective.CSMain.cs.spv  atmosphere_multiscatter.CSMain.cs.spv  atmosphere_skyview.CSMain.cs.spv  atmosphere_transmittance.CSMain.cs.spv  (+64 more)
tools/mpbake/: ClusterBuilder.cpp  ClusterBuilder.h  DagBuilder.cpp  DagBuilder.h  GltfIngest.cpp  GltfIngest.h  PageWriter.cpp  PageWriter.h  Simplify.cpp  Simplify.h  main.cpp
